tests/golden/types/invalid_badtypes.stderr
fregot (typecheck error):
  "invalid_badtypes.rego" (line 5, column 5):
  Subtype error:

    5|     b + "wat" = c
           ^^^^^^^^^

  Cannot use type string as number
